--- a/vokabulare/bildungstandards.qmd
+++ b/vokabulare/bildungstandards.qmd
@@ -11,5 +11,11 @@ Derzeit haben wir die folgenden Bildungstandards als kontrollierten Vokabulargru
 * [Deutsch Sek I 2022](https://skohub.io/iqb-vocabs/v34/heads/master/index.de.html)
 * [Mathematik Sek I 2022](https://skohub.io/iqb-vocabs/v51/heads/master/index.de.html)
 * [Fremdsprachen Sek I 2023](https://skohub.io/iqb-vocabs/v56/heads/master/index.de.html)
+* [Chemie MSA 2024](https://skohub.io/iqb-vocabs/v41/heads/master/index.de.html)
+* [Physik MSA 2024](https://skohub.io/iqb-vocabs/v47/heads/master/index.de.html)
+* [Biologie MSA 2022](https://skohub.io/iqb-vocabs/v44/heads/master/index.de.html)
 
-
+Und wir auch die alten Bilgdungstandards als kontrollierten Vokabulargruppen auf Skohub veröffnentichen:
+* [Chemie MSA 2004](https://skohub.io/iqb-vocabs/v40/heads/master/index.de.html)
+* [Physik MSA 2004](https://skohub.io/iqb-vocabs/v46/heads/master/index.de.html)
+* [Biologie MSA 2004](https://skohub.io/iqb-vocabs/v43/heads/master/index.de.html)
