--- a/vokabulare/bildungstandards.qmd
+++ b/vokabulare/bildungstandards.qmd
@@ -17,6 +17,14 @@ Derzeit haben wir die folgenden Bildungstandards als kontrollierten Vokabulargru
 
 Und wir auch die alten Bilgdungstandards als kontrollierten Vokabulargruppen auf Skohub veröffnentichen:
 
+* [Deutsch Primar 2024](https://skohub.io/iqb-vocabs/v13/heads/master/index.de.html)
+* [Mathematik Primar 2004](https://skohub.io/iqb-vocabs/v09/heads/master/index.de.html)
+* [Deutsch Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v31/heads/master/index.de.html)
+* [Deutsch Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v30/heads/master/index.de.html)
+* [Mathematik Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v53/heads/master/index.de.html)
+* [Mathematik Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v52/heads/master/index.de.html)
+* [Fremdsprachen Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v57/heads/master/index.de.html)
+* [Fremdsprachen Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v58/heads/master/index.de.html)
 * [Chemie MSA 2004](https://skohub.io/iqb-vocabs/v40/heads/master/index.de.html)
 * [Physik MSA 2004](https://skohub.io/iqb-vocabs/v46/heads/master/index.de.html)
 * [Biologie MSA 2004](https://skohub.io/iqb-vocabs/v43/heads/master/index.de.html)
