--- a/metadatenprofile/index.qmd
+++ b/metadatenprofile/index.qmd
@@ -18,7 +18,7 @@ Typdefinitionen für Metadatenprofile und Metadaten-Werte [finden Sie hier](http
 Metadatenprofile für Aufgaben und Items des IQB im Rahmen der Aufgabenentwicklung für:
 
   * [IQB Deutsch Primar](https://iqb-vocabs.github.io/p12/) (Aufgaben, Items)
-  * [IQB Mathematik Primar](https://iqb-vocabs.github.io/p11/) (Aufgaben, Items)
+  * [IQB Mathematik Primar](https://iqb-vocabs.github.io/p15/) (Aufgaben, Items)
   * [IQB Französisch Sekundarstufe I](https://iqb-vocabs.github.io/p52/) (Aufgaben, Items)
   * [IQB Englisch Sekundarstufe I](https://iqb-vocabs.github.io/p53/) (Aufgaben, Items)
   * [IQB Deutsch Sekundarstufe I](https://iqb-vocabs.github.io/p16/) (Aufgaben, Items)
@@ -35,4 +35,6 @@ Anderen Profile:
 
   * [IQB TB-Fragebögen](https://iqb-vocabs.github.io/p60/) (Aufgaben, Items)
   * [VerbundFDB-Metadatenprofil: Kernset Bildungsforschung](https://iqb-vocabs.github.io/p80/) (Aufgaben)
+  * [IQB Testprofil](https://iqb-vocabs.github.io/p99/) (Aufgaben, Items)
+
 
