--- a/vokabulare/bildungstandards.qmd
+++ b/vokabulare/bildungstandards.qmd
@@ -4,27 +4,33 @@
 ---
 
 Bildungsstandards sind fachdidaktisch begründete und auf mittlerem Abstraktionsgrad formulierte Leistungserwartungen an die Schüler\*innen. Sie nehmen damit eine Mittelstellung zwischen sehr allgemeinen Bildungszielen einerseits und konkreten Aufgabenstellungen andererseits ein und setzen diese miteinander in Beziehung. Sie sind dadurch sowohl zukunfts- und verwendungsoffen als auch gesellschaftlich konsensfähig. Mithilfe der Testergebnisse kann nachgewiesen werden, wie gut Schüler\*innen in der Lage sind, fachbezogene Aufgaben und Probleme zu lösen.
+
 Derzeit haben wir die folgenden Bildungstandards als kontrollierten Vokabulargruppen auf Skohub veröffnentichen:
 
-* [Deutsch Primar 2022](https://skohub.io/iqb-vocabs/v12/heads/master/index.de.html)
-* [Mathematik Primar 2022](https://skohub.io/iqb-vocabs/v10/heads/master/index.de.html)
-* [Deutsch Sek I 2022](https://skohub.io/iqb-vocabs/v34/heads/master/index.de.html)
-* [Mathematik Sek I 2022](https://skohub.io/iqb-vocabs/v51/heads/master/index.de.html)
-* [Fremdsprachen Sek I 2023](https://skohub.io/iqb-vocabs/v56/heads/master/index.de.html)
-* [Chemie MSA 2024](https://skohub.io/iqb-vocabs/v41/heads/master/index.de.html)
-* [Physik MSA 2024](https://skohub.io/iqb-vocabs/v47/heads/master/index.de.html)
-* [Biologie MSA 2024](https://skohub.io/iqb-vocabs/v44/heads/master/index.de.html)
+|Fach    | Primarstufe | Sekundarstufe I |
+|-----------------|:--------------------|:--------------------|
+| Deutsch         |[Deutsch Primar 2022](https://skohub.io/iqb-vocabs/v12/heads/master/index.de.html)|[Deutsch Sek I 2022](https://skohub.io/iqb-vocabs/v34/heads/master/index.de.html)|
+| Mathematik      |[Mathematik Primar 2022](https://skohub.io/iqb-vocabs/v10/heads/master/index.de.html)| [Mathematik Sek I 2022](https://skohub.io/iqb-vocabs/v51/heads/master/index.de.html)|
+| Fremdsprachen        || [Fremdsprachen Sek I 2023](https://skohub.io/iqb-vocabs/v56/heads/master/index.de.html)|
+| Chemie || [Chemie MSA 2024](https://skohub.io/iqb-vocabs/v41/heads/master/index.de.html)|
+| Physik || [Physik MSA 2024](https://skohub.io/iqb-vocabs/v47/heads/master/index.de.html)|
+| Biologie || [Biologie MSA 2024](https://skohub.io/iqb-vocabs/v44/heads/master/index.de.html)|
+: Tabelle 1: Bildungstandards  {.hover}
+
 
 Und wir auch die alten Bilgdungstandards als kontrollierten Vokabulargruppen auf Skohub veröffnentichen:
 
-* [Deutsch Primar 2004](https://skohub.io/iqb-vocabs/v13/heads/master/index.de.html)
-* [Mathematik Primar 2004](https://skohub.io/iqb-vocabs/v09/heads/master/index.de.html)
-* [Deutsch Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v31/heads/master/index.de.html)
-* [Deutsch Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v30/heads/master/index.de.html)
-* [Mathematik Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v53/heads/master/index.de.html)
-* [Mathematik Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v52/heads/master/index.de.html)
-* [Fremdsprachen Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v57/heads/master/index.de.html)
-* [Fremdsprachen Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v58/heads/master/index.de.html)
-* [Chemie MSA 2004](https://skohub.io/iqb-vocabs/v40/heads/master/index.de.html)
-* [Physik MSA 2004](https://skohub.io/iqb-vocabs/v46/heads/master/index.de.html)
-* [Biologie MSA 2004](https://skohub.io/iqb-vocabs/v43/heads/master/index.de.html)
+
+|Fach    | Primarstufe | Sekundarstufe I  |
+|-----------------|:--------------------|:--------------------|
+| Deutsch  |[Deutsch Primar 2004](https://skohub.io/iqb-vocabs/v13/heads/master/index.de.html)      |   [Deutsch Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v30/heads/master/index.de.html) |
+|          |    |   [Deutsch Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v31/heads/master/index.de.html) |
+| Mathematik     | [Mathematik Primar 2004](https://skohub.io/iqb-vocabs/v09/heads/master/index.de.html) | [Mathematik Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v52/heads/master/index.de.html) |
+|          |    | [Mathematik Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v53/heads/master/index.de.html) |
+| Fremdsprachen || [Fremdsprachen Sek I - HSA 2004](https://skohub.io/iqb-vocabs/v58/heads/master/index.de.html) |
+|           |    | [Fremdsprachen Sek I - MSA 2003](https://skohub.io/iqb-vocabs/v57/heads/master/index.de.html)    |
+| Chemie ||[Chemie MSA 2004](https://skohub.io/iqb-vocabs/v40/heads/master/index.de.html)|
+| Physik ||[Physik MSA 2004](https://skohub.io/iqb-vocabs/v46/heads/master/index.de.html)|
+| Biologie ||[Biologie MSA 2004](https://skohub.io/iqb-vocabs/v43/heads/master/index.de.html)|
+
+: Tabelle 2: Alte Bildungstandards  {.hover}
