--- a/metadatenprofile/index.qmd
+++ b/metadatenprofile/index.qmd
@@ -17,19 +17,23 @@ Typdefinitionen für Metadatenprofile und Metadaten-Werte [finden Sie hier](http
 
 Metadatenprofile für Aufgaben und Items des IQB im Rahmen der Aufgabenentwicklung für:
 
-  * [IQB Deutsch Primar](https://iqb-vocabs.github.io/p12/) (Aufgaben, Items)
-  * [IQB Mathematik Primar](https://iqb-vocabs.github.io/p15/) (Aufgaben, Items)
-  * [IQB Französisch Sekundarstufe I](https://iqb-vocabs.github.io/p52/) (Aufgaben, Items)
-  * [IQB Englisch Sekundarstufe I](https://iqb-vocabs.github.io/p53/) (Aufgaben, Items)
-  * [IQB Deutsch Sekundarstufe I](https://iqb-vocabs.github.io/p16/) (Aufgaben, Items)
+| Fach | Primarstufe | Sekundarstufe |
+|-----------------|:-------------------------|:--------------------------------|
+| Deutsch         |[IQB Deutsch Primar](https://iqb-vocabs.github.io/p12/) (Aufgaben, Items) |[IQB Deutsch Sekundarstufe I](https://iqb-vocabs.github.io/p16/) (Aufgaben, Items) |
+| Mathematik      |[IQB Mathematik Primar](https://iqb-vocabs.github.io/p11/) (Aufgaben, Items)|      |
+| Englisch        |     |[IQB Englisch Sekundarstufe I](https://iqb-vocabs.github.io/p53/) (Aufgaben, Items) |
+| Französisch     |     |[IQB Französisch Sekundarstufe I](https://iqb-vocabs.github.io/p52/) (Aufgaben, Items) |
+: Tabelle 1: Metadateprofile  {.hover}
 
-Metadatenprofile mit alten Bildungsstandards für Aufgaben und Items des IQB im Rahmen der Aufgabenentwicklung für: 
+Alte Metadatenprofile für Aufgaben und Items des IQB im Rahmen der Aufgabenentwicklung für:
 
-  * [IQB Deutsch Primar 2004](https://iqb-vocabs.github.io/p14/) (Aufgaben, Items)
-  * [IQB Mathematik Primar 2004](https://iqb-vocabs.github.io/p09/) (Aufgaben, Items)
-  * [IQB Französisch Sekundarstufe I 2003/2004](https://iqb-vocabs.github.io/p55/) (Aufgaben, Items)
-  * [IQB Englisch Sekundarstufe I 2003/2004](https://iqb-vocabs.github.io/p54/) (Aufgaben, Items)
-  * [IQB Deutsch Sekundarstufe I 2003](https://iqb-vocabs.github.io/p17/) (Aufgaben, Items)
+| Fach | Primarstufe | Sekundarstufe |
+|-----------------|:-------------------------|:--------------------------------|
+| Deutsch         |[IQB Deutsch Primar 2004](https://iqb-vocabs.github.io/p14/) (Aufgaben, Items) | [IQB Deutsch Sekundarstufe I 2003](https://iqb-vocabs.github.io/p17/) (Aufgaben, Items) |
+| Mathematik      |[IQB Mathematik Primar 2004](https://iqb-vocabs.github.io/p15/) (Aufgaben, Items)|      |
+| Englisch        |     |[IQB Englisch Sekundarstufe I 2003/2004](https://iqb-vocabs.github.io/p54/) (Aufgaben, Items) |
+| Französisch     |     |[IQB Französisch Sekundarstufe I 2003/2004](https://iqb-vocabs.github.io/p55/) (Aufgaben, Items) |
+: Tabelle 2: Alte Metadateprofile  {.hover}
 
 Anderen Profile:
 
