Add Vocabulary Audio

--- a/vokabulare/allg_vocabs.qmd
+++ b/vokabulare/allg_vocabs.qmd
@@ -8,4 +8,5 @@ Für unsere Aufgaben und Items haben wir nun die folgenden kontrollierten Vokabu
 * [Textvorgabe Fremdsprachen](https://skohub.io/iqb-vocabs/v25/heads/master/index.de.html)
 * [Allgemeine Kompetenzen Fremdsprachen](https://skohub.io/iqb-vocabs/v26/heads/master/index.de.html)
 * [Textvorgabe Deutsch](https://skohub.io/iqb-vocabs/v28/heads/master/index.de.html)
+* [Audio](https://skohub.io/iqb-vocabs/v24/heads/master/index.de.html)
 * [IQB Fragebögen](https://skohub.io/iqb-vocabs/v37/heads/master/index.de.html)
